fix(addsections): wrap add btns with list items

--- a/src/components/AddSections/AddSections.scss
+++ b/src/components/AddSections/AddSections.scss
@@ -20,7 +20,7 @@
     }
   }
 
-  &-Button {
+  &-ListItem {
     width: vars.$button-width-main;
   }
 
