--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -36,5 +36,9 @@
     &_medium {
       min-width: 6rem;
     }
+
+    &_full {
+      width: 100%;
+    }
   }
 }
